--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,9 @@
 ja:
+  time:
+    formats:
+      default: ! '%Y/%m/%d'
+      long: ! '%Y年%m月%d日(%a) %H時%M分%S秒 %z'
+      short: ! '%Y年%m月%d日 %H:%M'
   datetime:
     distance_in_words:
       about_x_hours:
